# qa-automation-showcase

./: .dockerignore  .gitignore  .prettierignore  docker-compose.override.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml
.github/workflows/: backend.yml  e2e.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  database.py  execution_buffer.py
backend/app/etl/: loader.py  parser.py
backend/app/models/: test_run.py
backend/app/routers/: execute.py  ingest.py  runs.py
backend/app/schemas/: test_run.py
backend/app/services/: runner.py
backend/tests/: conftest.py  test_api.py  test_etl.py
dashboard/: Dockerfile  next.config.ts  package.json  tailwind.config.ts
dashboard/public/runs/: run-001.json  run-002.json  run-003.json  run-2026-07-01T18-37-23-600.json  run-2026-07-01T19-57-48-638.json
dashboard/src/app/: layout.tsx  page.tsx
dashboard/src/components/: LiveRun.tsx  PassFailChart.tsx  ResultsTable.tsx  StatusBadge.tsx  SummaryCards.tsx  TrendChart.tsx
dashboard/src/lib/: api.ts  data.ts  report.ts
docs/: .gitkeep
scripts/: save-run.mjs
tests/: eslint.config.mjs  package.json  playwright.config.ts  playwright.evidence.config.ts  tsconfig.json
tests/src/evidence/: Evidence.ts  compra.evidence.ts  fixtures.ts  pdf.ts  suite.evidence.ts
tests/src/fixtures/: actors.ts
tests/src/pages/: CartPage.ts  CheckoutPage.ts  InventoryPage.ts  LoginPage.ts
tests/src/questions/: CartBadgeCount.ts  CheckoutOverviewItems.ts  ErrorMessage.ts  (+2 more)
(+19 files in other folders)
